--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     }
 
     #hero {
-      height: 50vh;
+      height: auto;
+      min-height: 667px;
+      padding-top: 114px;
     }
   </style>
 </head>
@@ -360,16 +362,15 @@
                 <p style="color:#6A728A;">contact@exaclicks.com</p>
               </div>
 
-              <div style="font-size: 27px;font-weight: 700;color:#16df7e;">Feel free to contact us!</div>
+              <div style="font-size: 27px;font-weight: 700;color:#6A728A;">Feel free to contact us!</div>
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <iframe
+            <iframe title="ExaClicks Address"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.904697129066!2d14.49020171485663!3d35.90034972553168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e4549959d1575%3A0xf997ecb1b37cd856!2sExaClicks%20Ltd!5e0!3m2!1sen!2smt!4v1624364832185!5m2!1sen!2smt"
-              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-              alt="ExaClicks Address"></iframe>
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
           </div>
 
